app-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-tracker
  namespace: os-stogops-wrk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-tracker
  template:
    metadata:
      labels:
        app: task-tracker
    spec:
      containers:
      - name: task-tracker
        image: us-central1-docker.pkg.dev/operative-001/os-stogops/os/stogops/task-tracker:latest
        ports:
        - containerPort: 8080
