app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: task-tracker
    app.kubernetes.io/managed-by: operative
    app.kubernetes.io/name: task-tracker
  name: task-tracker-svc
  namespace: os-stogops-wrk
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: task-tracker
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: task-tracker
    app.kubernetes.io/managed-by: operative
    app.kubernetes.io/name: task-tracker
