app-httproute.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: task-tracker-route
  namespace: os-stogops-wrk
spec:
  parentRefs:
  - name: appgw-stogops-apps
    namespace: envoy-gateway-system
    sectionName: http
  hostnames:
  - "tasks.stogops.a0.operativeapp.com"
  rules:
  - backendRefs:
    - name: task-tracker-svc
      port: 80
